# sleeping-beauty

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
configs/: config.yaml  hic.yaml
notebook/: bootstrap.py
notebook/notebooks/: 01_loading.ipynb  02_oura_api_client.ipynb  03_oura_api_sessions.ipynb  04_oura_api_sleep.ipynb  05_oura_api_heartrate.ipynb  06_oura_api_daily_readiness.ipynb  20_sleep_summary.ipynb
notebook/utils/: env_setup.py
scripts/: register_oura_webhook.py  register_oura_webhook_catcher.py
src/sleeping_beauty/: exception.py  host.py  launch_host.py
src/sleeping_beauty/clients/: oura_api_client.py  oura_errors.py  oura_webhook_admin.py
src/sleeping_beauty/clients/models/: webhook_subscription_result.py
src/sleeping_beauty/clients/oura_endpoints/: daily_readiness.py  daily_sleep_score.py  heartrate.py  personal_info.py  session.py  sleep.py
src/sleeping_beauty/config/: config.py
src/sleeping_beauty/core/sleep/: sleep_day_builder.py  sleep_day_provider.py  sleep_day_snapshot.py  sleep_stage.py  sleep_timeline.py  (+2 more)
src/sleeping_beauty/ingress/: main.py
src/sleeping_beauty/logging/: log_formatters.py  logger_manager.py
src/sleeping_beauty/logsys/: logger_manager.py
src/sleeping_beauty/models/: command_line_args.py  singleton.py  sleep_context.py
src/sleeping_beauty/runtime/: command_line.py  logging_argument_parser.py
src/sleeping_beauty/services/: auth_service.py  sleep_journal_service.py  sleep_service.py  sleep_summary_service.py
src/sleeping_beauty/utils/: arg_utils.py  env_utils.py  path_utils.py
(+17 files in other folders)
